[package]
name = "mind_sdk_deepseek"
version = "0.1.0"
edition = "2021"
authors = ["Mind Network"]
description = "Mind Network Rust SDK"
license = "MIT"
homepage = "https://github.com/mind-network"
repository = "https://github.com/mind-network/mind-sdk-deepseek-rust"
readme = "README.md"
keywords = ["fhe", "async", "web3", "ai", "deepseek"]
categories = ["cryptography"]


[dependencies]
mind_sdk_fhe = "0.1.2"
mind_sdk_util = "0.1.2"
mind_sdk_chain = "0.1.2"
mind_sdk_config = "0.1.2"
mind_sdk_io = "0.1.2"
mind_sdk_cli = "0.1.2"

serde = { version="1.0.217", features = ["derive"]}
serde_json = "1.0.138"
log = "0.4.25"
chrono = { version = "0.4.39", features = ["serde"] }

rand = { version = "0.9.0"}
reqwest = { version = "0.12.12", features = ["blocking", "json", "multipart"] }
hex = "0.4.3"
bytes = "1.10.0"
toml = "0.8.20"
base64 = "0.22.1"
bincode = "1.3.3"
k256 = "0.13.4"
sha3 = "0.10.8"
alloy = { version = "0.5.2", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.5.30", features = ["default", "derive"] }
flexi_logger = "0.29.8"
sqlx = { version = "0.8.3", features = [
    "sqlite",
    "mysql",
    "runtime-tokio",
    "derive",
    "json",
    "tls-rustls",
    "bigdecimal",
] }
openssl = "0.10.71"
dotenv = "0.15.0"
gethostname = "1.0.0"
futures = "0.3.31"
deepseek_rs = "0.1.4"

[target.'cfg(target_arch = "aarch64")'.dependencies]
tfhe = { version = "0.8.3", features = [
    "boolean",
    "shortint",
    "integer",
    "aarch64-unix",
], optional = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
tfhe = { version = "0.8.3", features = [
    "boolean",
    "shortint",
    "integer",
    "x86_64-unix",
], optional = false, default-features = false }

[target.wasm32-unknown-unknown.dependencies]
tfhe = { version = "0.8.3", features = [
    "boolean-client-js-wasm-api",
    "shortint-client-js-wasm-api",
    "integer-client-js-wasm-api",
    "high-level-client-js-wasm-api",
], optional = false, default-features = false }
